--- a/src/Integration.Vsix_2017/Integration.Vsix.csproj
+++ b/src/Integration.Vsix_2017/Integration.Vsix.csproj
@@ -49,22 +49,20 @@
     <Compile Include="$(ReferencedDirectory)\**\*.cs" Exclude="**\obj\**\*;**\*Designer.cs;**\Settings\*;**\Telemetry\GeneratedCode\*">
       <Link>%(RecursiveDir)%(Filename)%(Extension)</Link>
     </Compile>
-    <Compile Include="$(ReferencedDirectory)\Settings\LocalizedCategoryAttribute.cs">
-      <Link>Settings\LocalizedCategoryAttribute.cs</Link>
+    <Compile Include="Settings\GeneralOptionsDialogControl.xaml.cs">
+      <DependentUpon>GeneralOptionsDialogControl.xaml</DependentUpon>
     </Compile>
-    <Compile Include="$(ReferencedDirectory)\Settings\LocalizedDescriptionAttribute.cs">
-      <Link>Settings\LocalizedDescriptionAttribute.cs</Link>
+    <Compile Include="Settings\OtherOptionsDialogControl.xaml.cs">
+      <DependentUpon>OtherOptionsDialogControl.xaml</DependentUpon>
     </Compile>
-    <Compile Include="$(ReferencedDirectory)\Settings\LocalizedDisplayNameAttribute.cs">
-      <Link>Settings\LocalizedDisplayNameAttribute.cs</Link>
-    </Compile>
-    <Compile Include="$(ReferencedDirectory)\Settings\IntegrationSettings.cs">
+    <Compile Include="Settings\OtherOptionsDialogPage.cs">
       <SubType>Component</SubType>
-      <Link>Settings\IntegrationSettings.cs</Link>
     </Compile>
-    <Compile Include="$(ReferencedDirectory)\Settings\OptionsPage.cs">
+    <Compile Include="Settings\GeneralOptionsDialogPage.cs">
       <SubType>Component</SubType>
-      <Link>Settings\OptionsPage.cs</Link>
+    </Compile>
+    <Compile Include="SonarLintDaemon\SonarLintDaemonInstaller.xaml.cs">
+      <DependentUpon>SonarLintDaemonInstaller.xaml</DependentUpon>
     </Compile>
     <Compile Include="$(ReferencedDirectory)\Telemetry\GeneratedCode\SqmCommandFacade.cs">
       <AutoGen>True</AutoGen>
@@ -233,6 +231,8 @@
       <HintPath>..\..\packages\Microsoft.VisualStudio.Validation.15.0.82\lib\net45\Microsoft.VisualStudio.Validation.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="SonarAnalyzer">
       <HintPath>..\..\binaries\SonarAnalyzer.dll</HintPath>
     </Reference>
@@ -281,6 +281,7 @@
       <HintPath>..\..\packages\System.Console.4.3.0\lib\net46\System.Console.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Data" />
     <Reference Include="System.Diagnostics.FileVersionInfo, Version=4.0.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\..\packages\System.Diagnostics.FileVersionInfo.4.3.0\lib\net46\System.Diagnostics.FileVersionInfo.dll</HintPath>
       <Private>True</Private>
@@ -337,6 +338,8 @@
     <Reference Include="System.ValueTuple, Version=4.0.1.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\..\packages\System.ValueTuple.4.3.0\lib\netstandard1.0\System.ValueTuple.dll</HintPath>
     </Reference>
+    <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Xml.ReaderWriter, Version=4.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
@@ -355,6 +358,8 @@
       <HintPath>..\..\packages\System.Xml.XPath.XDocument.4.3.0\lib\net46\System.Xml.XPath.XDocument.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="UIAutomationProvider" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Integration_2017\Integration.csproj">
@@ -472,6 +477,20 @@
     <Analyzer Include="..\..\packages\SonarAnalyzer.CSharp.1.20.1\analyzers\Google.Protobuf.dll" />
     <Analyzer Include="..\..\packages\SonarAnalyzer.CSharp.1.20.1\analyzers\SonarAnalyzer.CSharp.dll" />
     <Analyzer Include="..\..\packages\SonarAnalyzer.CSharp.1.20.1\analyzers\SonarAnalyzer.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Include="Settings\GeneralOptionsDialogControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Settings\OtherOptionsDialogControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="SonarLintDaemon\SonarLintDaemonInstaller.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
